--- a/styles/app/blog/page.css
+++ b/styles/app/blog/page.css
@@ -1,7 +1,7 @@
 .container-blog {
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 80px 200px auto;
+  grid-template-rows: 80px auto auto;
   grid-template-areas:
     "topbar"
     "sidemenu"
