--- a/src/components/post/SideBar.css
+++ b/src/components/post/SideBar.css
@@ -17,12 +17,13 @@
 }
 
 .active-section {
-  color: rgb(27, 248, 222);
+  color: rgb(3, 105, 161);
+  /* color: rgb(96, 165, 250); */
   font-weight: bold;
 }
 
 .read-section {
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 /* .unread-section {
