--- a/src/components/home/section-presentation/Typewriter.scss
+++ b/src/components/home/section-presentation/Typewriter.scss
@@ -20,10 +20,10 @@
 		// &::before { font-weight: 600; }
 		@include typed(
 			"Hi<[2]> there<[2]>!<[5]>👋<[15]> I<[2]>'m<[1]> Javi<[1]>er <[2]>Castañ<[3]>o <[3]>:<[1]>-<[3]>)",
-			"I<[2]>'m a <[1]>Soft<[1]>ware <[1]>Engi<[1]>neer<[5]> and Data <[2]>Scientis<[1]>t <[2]>dedica<[2]>ted to<[1]> cre<[2]>ating <[2]>product<[2]>s with co<[2]>de and <[3]>AI <[11]>🥷",
+			"I<[2]>'m a <[1]>Soft<[3]>ware <[2]>Engi<[1]>neer<[5]> and <[1]>Data <[2]>Scientis<[2]>t<[3]> <[2]>dedica<[2]>ted to<[1]> cre<[2]>atin<[1]>g <[2]>product<[2]>s<[3]> with co<[2]>de<[3]> and <[3]>AI <[30]>🥷",
       		"Her<[1]>e <[2]>I write<[2]> abou<[1]>t soft<[2]>ware<[1]> and <[3]>tech <[5]>🚀<[7]>✨",
       // "I hop<[2]>e you<[2]> find my b<[1]>log help<[2]>ful <[5]>🧡", 
-			[.05, null, .01], (caret-width: 2px, caret-space: 2px, iterations: 1, end-on: "I hop<[2]>e you<[2]> find my b<[1]>log help<[2]>ful<[2]>! <[5]>🧡" )
+			[.05, null, .01], (caret-width: 2px, caret-space: 2px, iterations: 1, end-on: "I hop<[2]>e you<[2]> find my b<[1]>log help<[2]>ful<[2]>! <[20]>🧡" )
       // "I hop<[2]>e you<[2]> find my b<[1]>log help<[2]>ful<[2]>! <[5]>🧡" 💚🤓❤️‍🔥🩵🫡
 		);
 	}
