--- a/src/components/home/section-information/___InfoCard.css
+++ b/src/components/home/section-information/___InfoCard.css
@@ -1,8 +1,7 @@
-.info-card-container {
+/* .info-card-container {
   height: auto;
-  width: 70%;
   background-color: rgba(0, 0, 0, 0.7);
-}
+} */
 
 .ghd-card {
   height: auto;
@@ -78,7 +77,7 @@
 }
 
 .ghd-data__2 {
-  color: darkgoldenrod;
+  color: rgb(184, 134, 11);
   opacity: 0.8;
   font-weight: 600;
 }
