--- a/src/components/spotlight/SpotlightProx.css
+++ b/src/components/spotlight/SpotlightProx.css
@@ -30,13 +30,13 @@
 
 .container-glow {
   --spread: 60;
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
-  flex-direction: var(--direction);
-  gap: calc(var(--gap) * 1px);
+  flex-direction: var(--direction); */
+  /* gap: calc(var(--gap) * 1px); */
   /* margin: 0 auto; */
-  justify-content: center;
-  place-items: center;
+  /* justify-content: center;
+  place-items: center; */
   position: relative;
   /* padding: 2rem; */
   touch-action: none;
