style: fix info section

--- a/src/components/spotlight/SpotlightProx.css
+++ b/src/components/spotlight/SpotlightProx.css
@@ -39,7 +39,7 @@
   place-items: center; */
   position: relative;
   /* padding: 2rem; */
-  touch-action: none;
+  /* touch-action: none; */
 }
 
 .card-glows {
